option go_package="github.com/KidPudel/order-service/internal/proto/delivery";

package delivery;

service Delivery {
	rpc SendToDelivery(OrderInfo) returns (DeliveryAcknowledgment) {}
}


message OrderInfo {
	required uint32 type = 1;
	required uint32 amount = 2;
	optional string comment = 3;
}

message DeliveryAcknowledgment {
	required string response = 1;
}
